# db_server

./: Cargo.toml  UserData.session.sql  database.sqlite  test.rest
src/: main.rs  types.rs
src/config/: mod.rs
src/extractors/: authentication_token.rs
src/handlers/: handle_activities.rs  handle_channel_data.rs  handle_create_user.rs  handle_recommended.rs  handle_search_query.rs  mod.rs
src/handlers/handle_activities/: handle_follow.rs  handle_post.rs  mod.rs
src/migrations/: create_table.rs  mod.rs
src/models/: db_query_models.rs  mod.rs
src/operations/: append_refresh_tokens_table.rs  append_users_credentials_table.rs  append_users_details_table.rs  append_users_table.rs  get_channels.rs  get_query_results.rs  get_user_id.rs  get_username_by_id.rs  insert_new_user.rs  mod.rs  model_ops.rs  store_user_actions.rs
src/operations/activity_log_ops/: append_activity_log.rs  broadcast_activity_log.rs  mod.rs  post_activity_log.rs
src/operations/get_ops/: mod.rs
src/operations/get_ops/get_protected_ops/: mod.rs
src/operations/get_ops/get_query_ops/: mod.rs
src/operations/insert_ops/: mod.rs
src/operations/insert_ops/auth_insert_ops/: mod.rs
src/repositories/: activity_repo.rs  mod.rs  store_activity.rs  store_new_user.rs  user_auth.rs
src/repositories/activity_repos/: mod.rs  post_repo.rs
src/scopes/: activities.rs  database_queries.rs  mod.rs  users.rs
src/types_/: db_query_types.rs  mod.rs
src/utils/: db.rs  mod.rs  tools.rs
