[package]
name = "db_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
config = "0.13.3"

sqlx = { version = "0.7.1", features = ["sqlite","runtime-async-std-native-tls","macros"] }
ttaw = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
lazy_static = "1.4.0"
actix-web = "3.0"
actix-cors = "0.5"
jsonwebtoken = "8.3.0"
chrono = "0.4.26"

rust-argon2 = "1.0.0"
rand = "0.8.4"
rand_core = "0.6.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics",] }

eyre = "0.6.8"
color-eyre = "0.6.2"